# pptx-lecture-reconstruction-workbench

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  requirement.md  start.py  start_gui.bat
app/: __init__.py  cli.py  config.py  gui.py
app/builders/: __init__.py  docx_builder.py  html_builder.py  ir_builder.py
app/models/: __init__.py  ir_models.py  task_models.py
app/parsers/: __init__.py  diagram_parser.py  image_parser.py  ppt_parser.py  table_parser.py  text_parser.py
app/services/: export_service.py  llm_service.py  qa_service.py  task_service.py  workbench_service.py
app/utils/: diagram_assets.py  file_utils.py  fonts.py  layout.py
docs/: architecture.md  codex_closed_loop_lecture_workfile.md  codex_lossless_compilation_workfile.md  lecture_note_generation_spec.md  lossless_course_material_compiler_spec.md  qa_rules.md
prompts/: lecture_reconstruction_prompt.md  lossless_course_material_compiler_prompt.md
samples/expected_outputs/: README.md  demo_course.docx  demo_course.html
samples/expected_outputs/demo_course/: qa_report.json  qa_report.md  slide_ir.json
samples/sample_ppt/: demo_course.pptx
tests/: sample_factory.py  test_docx_export.py  test_ir.py  test_parser.py  test_workbench_service.py
